--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">                                        <!--change-->
-                <img src="assets/images/logo.png" width="190" height="28" alt="NestHub"><!--change-->
+                <img src="assets/images/logo.png" width="145" height="20" alt="NestHub"><!--change-->
             </a>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
@@ -768,7 +768,7 @@
 
                     <ul class="story-list">
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-1.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-1.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
@@ -792,7 +792,7 @@
                             </a>
                         </li>
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-2.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-2.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
@@ -816,7 +816,7 @@
                             </a>
                         </li>
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-3.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-3.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
@@ -840,7 +840,7 @@
                             </a>
                         </li>
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-4.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-4.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
@@ -864,7 +864,7 @@
                             </a>
                         </li>
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-5.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-5.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
@@ -888,7 +888,7 @@
                             </a>
                         </li>
 
-                        <li class="story-card" style="background-image: url(/assets/images/story-6.jpg);">
+                        <li class="story-card" style="background-image: url(/NestHub/public/assets/images/story-6.jpg);">
                             <a href="#" class="overlay-content">
 
                                 <div>
