--- a/public/profile.html
+++ b/public/profile.html
@@ -30,7 +30,7 @@
     
     body {
       background-color: #f8f9fa;
-      padding-top: 2rem;
+      /* padding-top: 2rem; */
     }
 
 
@@ -41,6 +41,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
+    margin-bottom: 1rem;
     }
 
 
