--- a/public/index.html
+++ b/public/index.html
@@ -963,7 +963,7 @@
                             <a href="#about" class="body-medium footer-link">About us</a>
                         </li>
                         <li>
-                            <a href="#" class="body-medium footer-link">Contact us</a>
+                            <a href="about.html" class="body-medium footer-link">Contact us</a>
                         </li>
                         <li>
                             <a href="#" class="body-medium footer-link">Privacy Policy</a>
