--- a/public/index.html
+++ b/public/index.html
@@ -944,7 +944,7 @@
                             <a href="#" class="body-medium footer-link">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="body-medium footer-link">Sell</a>
+                            <a href="login.html" class="body-medium footer-link">Sell</a>
                         </li>
                         <li>
                             <a href="#rent" class="body-medium footer-link">Rent</a>
