--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/public/assets/css/about.css">
+    <link rel="stylesheet" href="/assets/css/about.css">
 </head>
 <body>
         <nav class="navbar navbar-expand-lg">
@@ -34,7 +34,7 @@
                         <div class="card-inner">
                             <div class="card-body">
                                 <h3 class="name">Sayan Paul</h3>
-                                <img src="/public/assets/images/dp1.jpg" alt="Sayan Paul" class="clickable-image" onclick="enlargeImage(this)">
+                                <img src="/assets/images/dp1.jpg" alt="Sayan Paul" class="clickable-image" onclick="enlargeImage(this)">
                                 <div class="role">
                                     <p class="innerrole"><strong>Role: </strong>Frontend Developer</p> 
                                 </div>
@@ -61,7 +61,7 @@
                         <div class="card-inner">
                             <div class="card-body">
                                 <h3 class="name">Sayan Nag</h3>
-                                <img src="/public/assets/images/dp2.png" alt="Sayan Nag" class="clickable-image" onclick="enlargeImage(this)">
+                                <img src="/assets/images/dp2.png" alt="Sayan Nag" class="clickable-image" onclick="enlargeImage(this)">
                                 <div class="role">
                                     <p class="innerrole"><strong>Role: </strong>Backend Developer</p> 
                                 </div>
@@ -88,12 +88,12 @@
                         <div class="card-inner">
                             <div class="card-body">
                                 <h3 class="name">Kaustav Kr. Dey</h3>
-                                <img src="/public/assets/images/dp3.jpeg" alt="Kaustav Kr. Dey" class="clickable-image" onclick="enlargeImage(this)">
+                                <img src="/assets/images/dp3.jpeg" alt="Kaustav Kr. Dey" class="clickable-image" onclick="enlargeImage(this)">
                                 <div class="role">
                                     <p class="innerrole"><strong>Role: </strong>Coffee Drinker</p> 
                                 </div>
                                 <p class="desc">
-                                    Coffee peene aaya hai.
+                                   I am a game designer focused on coding and interactive experiences, specializing in C#, JavaScript, and Unity
                                 </p>
 
                                 <div class="social-icons">
@@ -115,7 +115,7 @@
                         <div class="card-inner">
                             <div class="card-body">
                                 <h3 class="name">Rajat Ghosh</h3>
-                                <img src="/public/assets/images/dp4.jpeg" alt="Rajat Ghosh" class="clickable-image" onclick="enlargeImage(this)">
+                                <img src="/assets/images/dp4.jpeg" alt="Rajat Ghosh" class="clickable-image" onclick="enlargeImage(this)">
                                 <div class="role">
                                     <p class="innerrole"><strong>Role: </strong>Coffee Drinker</p> 
                                 </div>
@@ -124,10 +124,10 @@
                                 </p>
 
                                 <div class="social-icons">
-                                    <a href="https://www.linkedin.com/in/sayan-paul-a3863a247" target="_blank">
+                                    <a href=" https://www.linkedin.com/in/rajat-ghosh-977376255/" target="_blank">
                                         <i class="lin fab fa-linkedin"></i>
                                     </a>
-                                    <a href="https://github.com/sayanpaul224" target="_blank">
+                                    <a href=" https://github.com/RajatGhosh21" target="_blank">
                                         <i class="ghub fab fa-github"></i>
                                     </a>
                                     <a href="#" target="_blank">
@@ -144,6 +144,6 @@
     </main>
 
 
-<script src="/public/js/about.js"></script>
+<script src="/js/about.js"></script>
 </body>
 </html>
