--- a/public/sell.html
+++ b/public/sell.html
@@ -44,8 +44,8 @@
                         </div>
                         <div class="mb-4">
                             <label for="phone" class="form-label">Whatsapp Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" required
-                                   placeholder="+1 (555) 000-0000">
+                            <input type="tel" class="form-control" maxlength="10" id="phone" required
+                                   placeholder="+91 (XXX) XXX-XXXX">
                             <div class="invalid-feedback">Please enter a valid phone number</div>
                         </div>
                         <div class="mb-4">
@@ -76,11 +76,11 @@
                         </div>
                         <div class="mb-4">
                             <label for="postalCode" class="form-label">Postal Code</label>
-                            <input type="text" class="form-control" id="postalCode" required>
+                            <input type="text" class="form-control" maxlength="6" id="postalCode" required>
                         </div>
                         <div class="mb-4">
                             <label for="price" class="form-label">Price</label>
-                            <input type="number" class="form-control" id="price" required>
+                            <input type="number" required step="100" min="0" class="form-control" id="price" required>
                         </div>
                         
                         <div class="mb-4">
