--- a/public/sell.html
+++ b/public/sell.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="mb-4">
                             <label for="phone" class="form-label">Whatsapp Phone Number</label>
-                            <input type="tel" class="form-control" maxlength="10" id="phone" required
+                            <input type="number" class="form-control" maxlength="10" id="phone" required
                                    placeholder="+91 (XXX) XXX-XXXX">
                             <div class="invalid-feedback">Please enter a valid phone number</div>
                         </div>
